--- a/AlgerianForestFires_FloraMaeVillarin.ipynb
+++ b/AlgerianForestFires_FloraMaeVillarin.ipynb
@@ -3122,6 +3122,13 @@
     "import pickle\n",
     "pickle.dump(ridge_reg,open(\"final_model.pkl\",'wb'))"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Files uploaded in github: https://github.com/floramaevillarin/Neural-Networks-and-Deep-Learning"
+   ]
   }
  ],
  "metadata": {
