--- a/AlgerianForestFires_FloraMaeVillarin.ipynb
+++ b/AlgerianForestFires_FloraMaeVillarin.ipynb
@@ -3064,7 +3064,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Fetaure Selection for Model Deployment"
+    "## Feature Selection for Model Deployment"
    ]
   },
   {
